frame/support/test/tests/pallet_ui/type_value_002.stderr
error: Invalid pallet::type_value, expect return type
  --> $DIR/type_value_002.rs:18:24
   |
18 |     #[pallet::type_value] fn Foo() {}
   |                           ^^
